--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -178,15 +178,28 @@
                     <layout class="QHBoxLayout" name="horizontalLayout_2">
                      <item>
                       <layout class="QHBoxLayout" name="horizontalLayout_3">
+                       <property name="spacing">
+                        <number>6</number>
+                       </property>
+                       <property name="sizeConstraint">
+                        <enum>QLayout::SetDefaultConstraint</enum>
+                       </property>
                        <item>
                         <widget class="QLabel" name="label_7">
                          <property name="text">
                           <string>R=</string>
                          </property>
+                         <property name="alignment">
+                          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+                         </property>
                         </widget>
                        </item>
                        <item>
-                        <widget class="QDoubleSpinBox" name="doubleSpinBox_7"/>
+                        <widget class="QDoubleSpinBox" name="doubleSpinBox_7">
+                         <property name="alignment">
+                          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                         </property>
+                        </widget>
                        </item>
                       </layout>
                      </item>
