--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>2550</width>
-    <height>830</height>
+    <height>926</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -266,6 +266,9 @@
                      </item>
                      <item row="1" column="1">
                       <widget class="QGroupBox" name="groupBox_5">
+                       <property name="enabled">
+                        <bool>true</bool>
+                       </property>
                        <property name="sizePolicy">
                         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                          <horstretch>0</horstretch>
@@ -340,6 +343,39 @@
                           </item>
                           <item row="1" column="1">
                            <widget class="QDoubleSpinBox" name="doubleSpinBox_15"/>
+                          </item>
+                         </layout>
+                        </item>
+                       </layout>
+                      </widget>
+                     </item>
+                     <item row="3" column="1">
+                      <widget class="QGroupBox" name="groupBox_7">
+                       <property name="title">
+                        <string>NSR-98 Seismic load parameters</string>
+                       </property>
+                       <layout class="QGridLayout" name="gridLayout_14">
+                        <item row="0" column="0">
+                         <layout class="QFormLayout" name="formLayout_9">
+                          <item row="0" column="0">
+                           <widget class="QLabel" name="label_18">
+                            <property name="text">
+                             <string>Aa:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="1">
+                           <widget class="QDoubleSpinBox" name="doubleSpinBox_16"/>
+                          </item>
+                          <item row="1" column="0">
+                           <widget class="QLabel" name="label_19">
+                            <property name="text">
+                             <string>S:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="1" column="1">
+                           <widget class="QDoubleSpinBox" name="doubleSpinBox_17"/>
                           </item>
                          </layout>
                         </item>
