Labels for QRadioButton at frame type

--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -474,36 +474,18 @@
                   </property>
                   <layout class="QGridLayout" name="gridLayout_11">
                    <item row="0" column="0">
-                    <layout class="QFormLayout" name="formLayout_11">
-                     <property name="sizeConstraint">
-                      <enum>QLayout::SetDefaultConstraint</enum>
-                     </property>
-                     <property name="fieldGrowthPolicy">
-                      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-                     </property>
-                     <property name="rowWrapPolicy">
-                      <enum>QFormLayout::DontWrapRows</enum>
-                     </property>
-                     <property name="labelAlignment">
-                      <set>Qt::AlignJustify|Qt::AlignVCenter</set>
-                     </property>
-                     <property name="formAlignment">
-                      <set>Qt::AlignJustify|Qt::AlignTop</set>
-                     </property>
-                     <property name="verticalSpacing">
-                      <number>7</number>
-                     </property>
+                    <layout class="QGridLayout" name="gridLayout_16">
                      <item row="0" column="0">
                       <widget class="QRadioButton" name="radioButton">
                        <property name="text">
-                        <string>RadioButton</string>
+                        <string>Spatial</string>
                        </property>
                       </widget>
                      </item>
                      <item row="0" column="1">
                       <widget class="QRadioButton" name="radioButton_2">
                        <property name="text">
-                        <string>RadioButton</string>
+                        <string>Perimetral</string>
                        </property>
                       </widget>
                      </item>
@@ -552,7 +534,7 @@
      <x>0</x>
      <y>0</y>
      <width>2550</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
