New form for spectra file selector

--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -425,6 +425,13 @@
                           </item>
                          </layout>
                         </item>
+                        <item row="2" column="0">
+                         <widget class="QGroupBox" name="groupBox_9">
+                          <property name="title">
+                           <string>Spectra file selector</string>
+                          </property>
+                         </widget>
+                        </item>
                        </layout>
                       </widget>
                      </item>
@@ -448,7 +455,7 @@
                      <item row="0" column="0">
                       <widget class="QLabel" name="label_15">
                        <property name="text">
-                        <string> Vector of story heigths (m):</string>
+                        <string>Vector of story heigths (m):</string>
                        </property>
                       </widget>
                      </item>
@@ -459,6 +466,16 @@
                          <horstretch>0</horstretch>
                          <verstretch>0</verstretch>
                         </sizepolicy>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="1">
+                      <widget class="QLineEdit" name="lineEdit_2"/>
+                     </item>
+                     <item row="1" column="0">
+                      <widget class="QLabel" name="label_23">
+                       <property name="text">
+                        <string>Vector of spans (m):</string>
                        </property>
                       </widget>
                      </item>
