--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -425,12 +425,28 @@
                           </item>
                          </layout>
                         </item>
-                        <item row="2" column="0">
-                         <widget class="QGroupBox" name="groupBox_9">
-                          <property name="title">
-                           <string>Spectra file selector</string>
-                          </property>
-                         </widget>
+                       </layout>
+                      </widget>
+                     </item>
+                     <item row="5" column="1">
+                      <widget class="QGroupBox" name="groupBox_9">
+                       <property name="title">
+                        <string>Spectra file selector</string>
+                       </property>
+                       <layout class="QGridLayout" name="gridLayout_17">
+                        <item row="0" column="0">
+                         <layout class="QFormLayout" name="formLayout_11">
+                          <item row="0" column="0">
+                           <widget class="QLabel" name="label_24">
+                            <property name="text">
+                             <string>Spect text file:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="1">
+                           <widget class="QLineEdit" name="lineEdit_3"/>
+                          </item>
+                         </layout>
                         </item>
                        </layout>
                       </widget>
@@ -507,6 +523,18 @@
                       </widget>
                      </item>
                     </layout>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QGroupBox" name="groupBox_10">
+                  <property name="title">
+                   <string>Frame tributary gravity loading</string>
+                  </property>
+                  <layout class="QGridLayout" name="gridLayout_18">
+                   <item row="0" column="0">
+                    <layout class="QFormLayout" name="formLayout_12"/>
                    </item>
                   </layout>
                  </widget>
